x11_screen driver context member initialization for X11 output

https://bugs.freedesktop.org/show_bug.cgi?id=61603

Signed-off-by: Alexandr <pankoAA@ya.ru>